--- a/.gitignore
+++ b/.gitignore
@@ -119,7 +119,6 @@ venv.bak/
 
 # mkdocs documentation
 /site
-
 # mypy
 .mypy_cache/
 .dmypy.json
@@ -147,3 +146,4 @@ dmypy.json
 
 # папки со статикой и медиа
 media/
+/static_dev/
